[metadata]
name = popcorn
version = 0.0.1
author = Emmanuel Brun
author_email = emmanuel.brun@inserm.fr
description = Tomographic reconstruction tools, phase_contrast and spectral imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DoctorEmmetBrown/popcorn
project_urls =
    Bug Tracker = https://github.com/DoctorEmmetBrown/popcorn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5